# playstealth-cli

./: .dockerignore  .editorconfig  .env  .env.example  .gitignore  .pre-commit-config.yaml  A2A-CARD.md  AGENTS.md  CHANGELOG.md  COMPLIANCE.md  CONTRIBUTING.md  Dockerfile  HACKING.md  LICENSE  Makefile  README.md  SECURITY.md  ULTRA-PLAN.md  add_comments.py  agent.json  audio_handler.py  bridge_retry.py  budget_guard.py  circuit_breaker.py  config.py  driver_interface.py  fail_recorder.py  fail_report.py  global_brain_client.py  heypiggy_vision_worker.py  infisical_sync.py  llms.txt  media_router.py  nvidia_video_analyzer.py  observability.py  opensin_bridge_integration.py  panel_overrides.py  persona.py  platform_profile.py  playstealth_cli.py  (+8 more)
.githooks/: pre-commit  pre-push
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  secrets.yml  security.yml  validate.yml
.opencode/: PCPM-AGENTS.md  pcpm-config.json
.opencode/hooks/: pcpm-after-run.sh  pcpm-before-run.sh
.pcpm/: active-context.json  knowledge-summary.json  rules.md  sync-conflicts.json
.playstealth_state/: telemetry.jsonl
config/: hf-space.yaml  telegram-bot.yaml
docs/: REWRITE_TRACKER.md  RFC-architecture-reset.md  architecture.md
governance/: incident-response-playbook.md
heypiggy_vision_worker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
n8n-workflows/: inbound-intake.json
opensin_bridge/: __init__.py  adapter.py  contract.py  evidence.py  observability.py  session_lifecycle.py
opensin_interaction/: __init__.py  engine.py
opensin_runtime/: __init__.py  panels.py  state_machine.py
opensin_stealth/: __init__.py  strategy.py
opensin_validation/: __init__.py  harness.py
playstealth_actions/: __init__.py  answer_strategies.py  answer_survey.py  auto_heal_selector.py  ban_risk_monitor.py  browser_bootstrap.py  click_card.py  click_survey.py  config_validator.py  consent_modal.py  dashboard_flow.py  date_question.py  detect_consent.py  detect_iframe.py  detect_new_tab.py  detect_popup.py  detect_question_type.py  detect_spinner.py  diagnostic_common.py  diagnostic_runner.py  dump_state.py  github_issue_reporter.py  human_behavior.py  human_delay.py  inspect_controls.py  inspect_modal.py  inspect_page.py  inspect_survey.py  inspect_tabs.py  list_cards.py  matrix_question.py  number_question.py  open_list.py  pacing_controller.py  page_utils.py  question_router.py  radio_question.py  rank_order_question.py  resilience_config.py  resilience_wrapper.py  (+18 more)
playstealth_actions/plugins/: base_dashboard.py  base_platform.py  dashboard_heypiggy.py  dashboard_loader.py  hey_piggy.py  qualtrics.py
profiles/: .gitignore  _template.json  jeremy_schulze.json
tests/: conftest.py  test_answer_strategies.py  test_audio_handler.py  test_auto_heal_selector.py  test_bridge_retry.py  test_circuit_breaker.py  test_config.py  test_driver_interface.py  test_e2e_smoke.py  test_fail_recorder.py  test_fail_report.py  test_github_issue_reporter.py  test_heypiggy_vision_worker.py  test_media_router.py  test_nvidia_video_analyzer.py  test_observability.py  test_persona_trap_integration.py  test_resilience_config.py  test_runner_plugin_integration.py  test_secret_manager.py  test_session_store.py  test_state_machine.py  test_state_store.py  test_survey_orchestrator.py  test_telemetry.py  test_tool_manifest.py  test_trap_detector.py  test_video_handler.py
tests/contract/: test_adapter.py  test_contract.py
tests/interaction/: test_engine.py
tests/runtime/: test_state_machine.py
tests/stealth/: test_strategy.py
tests/validation/: test_harness.py
tests/worker/: test_audit.py  test_cli.py  test_context.py  test_exceptions.py  test_logging.py  test_loop.py  test_public_api.py  test_retry.py  test_shutdown.py
worker/: __init__.py  __main__.py  _version.py  audit.py  bridge_contract.py  checkpoints.py  cli.py  context.py  exceptions.py  logging.py  loop.py  retry.py  shutdown.py  sitepack.py  telemetry.py
