[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "playstealth-cli"
version = "0.1.0"
description = "Modular Playwright+Stealth CLI for HeyPiggy survey flows."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "OpenSIN-AI" }]
keywords = ["playwright", "stealth", "cli", "automation", "heypiggy"]
dependencies = [
  "playwright>=1.45.0",
  "playwright-stealth>=1.0.6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.6.0",
]

[project.scripts]
playstealth = "playstealth_cli:main"

[project.urls]
Homepage = "https://github.com/SIN-CLIs/playstealth-cli"
Source = "https://github.com/SIN-CLIs/playstealth-cli"
Issues = "https://github.com/SIN-CLIs/playstealth-cli/issues"

[tool.setuptools]
py-modules = ["playstealth_cli", "playwright_stealth_worker"]

[tool.setuptools.packages.find]
where = ["."]
include = ["playstealth_actions*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
